ingress/create-repo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: create-repo-svc
  namespace: argo-events
spec:
  type: ClusterIP
  selector:
    eventsource-name: create-repo-eventsource  # 이벤트 소스의 라벨과 일치해야 함
  ports:
    - protocol: TCP
      port: 12000       # 서비스가 노출할 포트
      targetPort: 12000 # 이벤트 소스 컨테이너에서 사용하는 포트
